--- a/client/src/components/recipes/AddRecipe.css
+++ b/client/src/components/recipes/AddRecipe.css
@@ -85,7 +85,6 @@ button {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* width: 50%; */
     padding: 20px;
     background-color: #ffffff;
     border: 4px solid #ff4c4c;
@@ -118,4 +117,21 @@ button {
 
 .error-icon {
     font-size: 32px;
+}
+
+.instr-list {
+    align-items: center;
+    gap: 15px;
+    margin-left: 15%;
+    margin-bottom: 30px;
+    height: 100px;
+}
+
+.instr-label {
+    margin-left: -7.5%;
+}
+
+.instr-input {
+    margin-left: 20.5%;
+    margin-right: 7%;
 }
