--- a/client/src/components/searchpage/SearchPage.css
+++ b/client/src/components/searchpage/SearchPage.css
@@ -143,7 +143,7 @@
   color: #000000;
   -webkit-text-stroke-width: .8px;
   -webkit-text-stroke-color: var(--Schemes-On-Primary, #FFF);
-  margin-left: -250px;
+  margin-left: -210px;
 }
 
 .info-text .no-worries {
@@ -226,7 +226,7 @@
   background: #FFF1C2;
   border-radius: 50px;
   border: var(--sds-size-stroke-border) solid #000;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -264,19 +264,7 @@
   color: #000000;
 }
 
-/* Apply blur only to content outside the pop-up */
 .search-page .blurred {
   filter: blur(5px);
   pointer-events: none; /* Prevent interaction with blurred elements */
 }
-
-/* .search-bar.blur {
-  filter: blur(5px);
-}
-
-.history-items.blur {
-  filter: blur(5px);
-} */
-
-
-
