--- a/client/src/components/accountpage/UserProfilePage.css
+++ b/client/src/components/accountpage/UserProfilePage.css
@@ -1,7 +1,7 @@
 .page_style{
   display: flex;
   justify-content: center;
-  /* flex-direction: column; */
+  flex-direction: column; 
   justify-content: flex-start;
   align-items: center;
   min-height: 100vh; /* Ensures container can expand */
@@ -111,7 +111,7 @@
   }
 
 
-  .button-container {
+  .option-container {
     display: inline-flex;
     flex-direction: column;
     align-items: center;
@@ -119,14 +119,14 @@
     gap: 16px;
   }
   
-  .button {
+  .information, .posts, .friends {
     display: inline-flex;
     flex-direction: column;
     justify-content: flex-end;
-    width: 80px;
-    height: 50px;
+    width: 200px;
+    height: 120px;
     align-items: center;
-    padding: 16px 23px 0px 22px;
+    /*padding: 20px 23px 10px 22px;*/
     border-radius: 20px;
     border: 5px solid #3059DE;
     background: rgba(247, 255, 226, 0.00);
@@ -137,11 +137,12 @@
   .button-text {
     color: #000;
     font-family: Inter;
-    font-size: 16px;
+    font-size: 30px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: bold;
     line-height: normal;
     margin-bottom: 8px;
+    text-decoration: none;
   }
   
   .button svg {
@@ -153,10 +154,11 @@
     background-color: lightyellow;
   }
 
-  .container {
-    display: flex; 
+  .profilePage-container {
+    display: inline-flex; 
     justify-content: space-between;
     padding: 20px;
+    margin-top: 100px;
     gap: 40px;
   }
 
@@ -190,19 +192,17 @@
   line-height: normal;
 }
 
-.user_camera_edit {
-  width: 60px;
-  height: 41px;
+.avatar-edit {
+  width: 70px;
+  height: 70px;
   flex-shrink: 0;
   justify-content: center;
   align-items: center;
   display: flex;
 
   position: absolute; /* Enable overlap */
-  bottom: -5px; /* Move partially outside the profile-block */
-  right: -5px; /* Adjust as needed to control overlap */
-}
-
-.user_camera_img {
-  position: absolute;
+  bottom: -15px; /* Move partially outside the profile-block */
+  right: -15px; /* Adjust as needed to control overlap */
+  background-color: white;
+  border-radius: 40px;
 }
