Change UserProfilePagee as the NewsFeed page. Change its css

--- a/client/src/views/UserProfile/UserProfilePage.css
+++ b/client/src/views/UserProfile/UserProfilePage.css
@@ -1,3 +1,10 @@
+.sidebar-profilePage{
+  position: sticky; 
+  z-index: 1000;
+  width: 100%;
+  height: 100vh;
+}
+
 .page_style{
   display: flex;
   justify-content: center;
