Add path link to other users' account pagee

--- a/client/src/components/recipes/RecipeItem.css
+++ b/client/src/components/recipes/RecipeItem.css
@@ -62,7 +62,11 @@
     align-items: center;
     gap: 10px;
 }
-
+.recipe-owner {
+  text-decoration: none;
+  font-size: 25px;
+  color: black;
+}
 .fav-button, .like-button, #delete-button{
     outline: none;
     border: none;
