--- a/client/src/views/UserProfile/UserProfilePage.css
+++ b/client/src/views/UserProfile/UserProfilePage.css
@@ -159,7 +159,10 @@
   flex-direction: column;
   gap: 30px;
   position: relative;
-  margin-top: 100px;
   align-items: center;
 
+}
+
+.profilePage-header{
+  margin-top: 110px;
 }
