fix user's avatar on navbar

--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -70,7 +70,7 @@ img.postImage{
   background-color: #FFF1C2;
 }
 
-.userprofile{
+.profile{
   width: 70px;
   height: 70px;
   border-radius: 50%;
