--- a/client/src/components/recipes/RecipeItem.css
+++ b/client/src/components/recipes/RecipeItem.css
@@ -137,3 +137,9 @@
   .hidden{
     display: none;
   }
+
+  .avatar-on-recipe{
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+  }
