change id for buttons in AddRecipe so that it is not conflicted to other buttons on the app

--- a/client/src/components/recipes/AddRecipe.css
+++ b/client/src/components/recipes/AddRecipe.css
@@ -64,7 +64,7 @@ label.required::after {
     margin-bottom: 2%;
 }
 
-button {
+#addRecipe-button {
     padding: 20px 80px;
     background: #B0E0E2;
     border: none;
