--- a/client/src/components/recipes/RecipeItem.css
+++ b/client/src/components/recipes/RecipeItem.css
@@ -138,8 +138,9 @@
     display: none;
   }
 
-  .avatar-on-recipe{
+  #avatar-on-recipe{
     width: 100px;
     height: 100px;
     border-radius: 100px;
+    border: 1px solid black;
   }
