--- a/client/src/components/recipes/RecipeItem.css
+++ b/client/src/components/recipes/RecipeItem.css
@@ -14,7 +14,7 @@
     font-family: Inter;
     font-size: 30px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: bold;
     line-height: normal;
 }
 
@@ -138,9 +138,13 @@
     display: none;
   }
 
-  #avatar-on-recipe{
+  .avatar-on-recipe{
     width: 100px;
     height: 100px;
     border-radius: 100px;
     border: 1px solid black;
+  }
+  #default-avatar-on-recipe{
+    width: 110px;
+    height:110px;
   }
