Adding avatar-input-field when creating account and implementing back end. Fix adding recipe so that it is not conflicted to adding avatart

--- a/client/src/components/loginForm/CreateAccountForm.css
+++ b/client/src/components/loginForm/CreateAccountForm.css
@@ -55,3 +55,10 @@
   height: 24px;
   margin-right: 6px;
 }
+
+.avatar-preview-img{
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin-top: 10px;
+}
