--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -106,3 +106,25 @@ img.postImage{
     transform: translateY(0);
   }
 }
+
+.login-button {
+  font-size: 24px;
+  font-weight: bold;
+  color: #000;
+  padding: 0;
+  margin: 0;
+  border: none;
+  background: none;
+  width: 100px;
+  height: 95px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  text-transform: uppercase;
+}
+
+.login-button:hover {
+  background-color: #fff1c2;
+  color: #000;
+}
