--- a/client/src/components/recipes/RecipeItem.css
+++ b/client/src/components/recipes/RecipeItem.css
@@ -148,3 +148,29 @@
     width: 110px;
     height:110px;
   }
+
+  .notif-popup {
+    position: fixed;
+    top: 30px;
+    left: 200px;
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #ccc;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    font-size: 14px;
+    animation: fadein 0.3s ease-in-out;
+}
+  
+@keyframes fadein {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+}
+  
