--- a/client/src/components/profilePage/UserInfoPage.css
+++ b/client/src/components/profilePage/UserInfoPage.css
@@ -1,35 +1,35 @@
 .page_style{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+}
+ 
+.edit-button{
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: fit-content;
+  height: 120px;
+  align-items: center;
+  padding:0px 25px 25px 25px;
+  border-radius: 20px;
+  border: 5px solid #3059DE;
+  background: rgba(247, 255, 226, 0.00);
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size:xx-large;
+  font-weight: bold;
+}
+
+  .edit-button:hover {
+    background-color: lightyellow;
   }
-
-  .styled-button {
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 131px;
-    height: 87px;
-    border-radius: 20px;
-    border: 5px solid #3059DE;
-    background: #EEEE37;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-    outline: none;
-}
-
-.edit-text {
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-bottom: 8px;
-}
+  
+  .edit-button-icon{
+    width: 65px;
+  }
   
   .styled-button:hover {
     background: #d6d637; /* Slightly darker shade for hover effect */
@@ -41,9 +41,9 @@
     flex-direction: column;
     align-items: center;
     gap: 10px; /* Gap between each block */
-}
+  }
 
-  .block {
+  #block {
     display: inline-flex;
     padding: 15px 163px 13px 6px; /* Top, right, bottom, left */
     align-items: flex-start;
@@ -51,99 +51,106 @@
     border-radius: 20px;
     background: #F7FFE2;
     width: 500px;
-    height: 30px;
-}
+    height: 60px;
+  }
 
 .block-text-container {
-    display: flex;
-    width: 80px;
-    height: 35px;
-    /* padding: 5px; */
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 99px;
-    border: 1px solid #000;
-    background: #B0E0E2;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
+  display: flex;
+  width: 220px;
+  height: 50px;
+  /* padding: 5px; */
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 99px;
+  border: 1px solid #000;
+  background: #B0E0E2;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-left: 10px ;
+} 
 
 .block-text {
-    color: #000;
-    font-family: Inter, sans-serif;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  color: #000;
+  font-family: Inter, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  font-size: 25px;
 }
 
 .block-info-container {
-    display: flex;
-    /* min-width: 240px; */
-    padding: var(--sds-size-space-300) var(--sds-size-space-400);
-    align-items: center;
-    align-self: stretch;
-    border-radius: var(--sds-size-radius-200);
-    border: var(--sds-size-stroke-border) solid var(--sds-color-border-default-default);
-    background: white;
-    width: 500px;
-    height: 40px;
+  display: flex;
+  /* min-width: 240px; */
+  padding: var(--sds-size-space-300) var(--sds-size-space-400);
+  align-items: center;
+  align-self: stretch;
+  border-radius: var(--sds-size-radius-200);
+  border: var(--sds-size-stroke-border) solid var(--sds-color-border-default-default);
+  width: 500px;
+  height: 40px;
+  padding: 10px;
 }
 
 .block-info {
-    color: #000;
-    font-family: Inter, sans-serif;
-    font-size: 16px;
-    font-weight: 600;
+  color: #000;
+  font-family: Inter, sans-serif;
+  font-weight: 600;
+  font-size: 25px;
 }
 
 .button-container {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 20px;
-    gap: 16px;
-  }
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 20px;
+  gap: 16px;
+}
   
-  .button {
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    width: 80px; /* Ensure uniform width */
-    height: 50px; /* Ensure uniform height */
-    align-items: center;
-    padding: 16px 23px 0px 22px;
-    border-radius: 20px;
-    border: 5px solid #3059DE;
-    background: rgba(247, 255, 226, 0.00);
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
+.button {
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 80px; /* Ensure uniform width */
+  height: 50px; /* Ensure uniform height */
+  align-items: center;
+  padding: 16px 23px 0px 22px;
+  border-radius: 20px;
+  border: 5px solid #3059DE;
+  background: rgba(247, 255, 226, 0.00);
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
   
-  .button-text {
-    color: #000;
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-bottom: 8px;
-  }
+.button-text {
+  color: #000;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 8px;
+}
   
-  .button svg {
-    width: 49px;
-    height: 52px;
-  }
+.button img {
+  width: 50px;
+}
   
-  .button:hover {
-    background-color: lightyellow;
-  }
+.button:hover {
+  background-color: lightyellow;
+}
 
-  .page-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row; /* Ensures elements are in a row */
-    gap: 20px; /* Adjust space between containers */
-    position: relative;
+.page-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: block;
 }
