fix the issues not navigate to the expected page when clicking information button on UserAccountPage

--- a/client/src/components/profilePage/UserInfoPage.css
+++ b/client/src/components/profilePage/UserInfoPage.css
@@ -147,10 +147,10 @@
   position: relative;
 }
 
-.hidden {
+.hidden-block {
   display: none;
 }
 
-.visible {
+.visible-block {
   display: block;
 }
