popup message changes

--- a/client/src/components/recipes/RecipeItem.css
+++ b/client/src/components/recipes/RecipeItem.css
@@ -157,10 +157,7 @@
     height:110px;
   }
 
-  .notif-popup {
-    position: fixed;
-    top: 30px;
-    left: 200px;
+  .recipe-notif-popup {
     background-color: #fff;
     color: #000;
     border: 1px solid #ccc;
