make button styling more consistent #35

--- a/client/src/components/google/LoginButton.css
+++ b/client/src/components/google/LoginButton.css
@@ -1,6 +1,7 @@
 #googleButton {
-  margin-left: 25px;
-  margin-right: 25px;
-  padding-bottom: 15px;
-  font-size: 35px;
+  display: inline-block center;
+  width: 95%;
+  white-space: nowrap;
+  margin-left: 2%;
+  border-radius: 100px;
 }
