--- a/client/src/components/recipes/SavedFavoriteRecipeList.css
+++ b/client/src/components/recipes/SavedFavoriteRecipeList.css
@@ -1,4 +1,4 @@
-.recipes-container {
+.recipes-container-saved {
   align-items: center;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
