--- a/client/src/components/recipes/RecipeItem.css
+++ b/client/src/components/recipes/RecipeItem.css
@@ -41,8 +41,8 @@
 
 .post-img {
     background-color: black;
-    width: 540px;
-    height: 300px;
+    width: 100%;
+    height: 450px;
     align-items: center;
     object-fit: fill;
     border-radius: 20px;
@@ -67,21 +67,26 @@
   font-size: 25px;
   color: black;
 }
-.fav-button, .like-button, #delete-button, #report-button{
-    outline: none;
-    border: none;
-    box-shadow: none;
-    background-color: transparent;
-    cursor: pointer;
+.fav-button, 
+.like-button, 
+.comment-button, 
+#delete-button, 
+#report-button{
+  outline: none;
+  border: none;
+  box-shadow: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
-.like-button {
-    outline: none;
-    border: none;
-    box-shadow: none;
-    background-color: transparent;
-    cursor: pointer;
+.fav-button:hover,
+.like-button:hover, 
+#delete-button:hover, 
+.comment-button:hover,
+#report-button:hover{
+  background-color: rgb(100, 189, 237);
 }
+
 
 .horizontal-line {
     border-top: 1px solid #030000;
@@ -100,19 +105,19 @@
     align-items: center;
     z-index: 1000;
     font-size: 35px;
-  }
+}
   
-  .modal-content {
+.modal-content {
     background-color:  #F7FFE2;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
+}
   
-  .modal-content h2 {
+.modal-content h2 {
     margin-bottom: 10px;
-  }
+}
   
   .modal-content button {
     margin: 10px;
