--- a/client/src/components/recipes/AddRecipe.css
+++ b/client/src/components/recipes/AddRecipe.css
@@ -182,3 +182,8 @@ font-size: 50px;}
     margin-top: 10px;
     font-size: 30px;
 }
+
+.result-preview-img{
+    width: 200px;
+    height: 200px;
+}
