--- a/client/src/components/recipes/RecipeItem.css
+++ b/client/src/components/recipes/RecipeItem.css
@@ -1,6 +1,7 @@
 .post-box {
   width: auto;
-  height: auto;
+  max-width: 70%;
+  aspect-ratio: 1 / 1; /* Ensures the height equals the width */
   margin-left: auto;
   margin-right: auto;
   border-radius: 20px;
@@ -40,11 +41,14 @@
 
 .post-img {
   background-color: black;
-  width: 100%;
-  height: 450px;
+  width: auto;
+  max-width: 80%;
+  min-width: 250px;
+  aspect-ratio: 1 / 1; /* Ensures the height equals the width */
   align-items: center;
   object-fit: fill;
   border-radius: 20px;
+  margin-left: 10%;
 }
 
 .user-inf {
