--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -37,16 +37,27 @@ ul.right{
   display: flex;
   list-style-type: none;
   padding-right: 20px;
-  gap: 25px;
+  gap: 10px;
   align-items: center;
 }
 
 img.notifImage{
   margin-top: 5px;
-  margin-left: -10px;
+  margin-left: -100px;
+  width: 100px;
 }
 
-img.postImage, 
+.logo-nav{
+  width: 250px;
+}
+
+img.postImage{
+  width: 90px;
+}
+.login-icon {
+  width: 80px;
+}
+
 .home-icon,
 .search-icon-nav{
   width: 100px;
