--- a/client/src/components/navbar/Sidebar.css
+++ b/client/src/components/navbar/Sidebar.css
@@ -25,6 +25,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 30px;
 }
 
 
@@ -33,14 +34,14 @@
 }
 
 #saved-icon{
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     vertical-align: middle;
 }
 
 #friends-icon{
-    height: 60px;
-    width: 60px;
+    height: 80px;
+    width: 80px;
     vertical-align: middle;
 }
 
@@ -67,14 +68,19 @@
 
 .dropdown{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     padding: 5px;
     font-size: 25px;
+    align-items: flex-start;
+    margin-left: 20%;
+
 }
 
 .dropdown a{
     text-decoration: none;
     color: black;
+    font-size: 20px;
 }
 
 #filterarrow{
@@ -92,16 +98,17 @@
 }
 
 .ingredientsmenu{
-    position: fixed;
-    left: 200px;
-    top: 479px;
     overflow-y: auto;
-    max-height: 250px
+    max-height: 250px;
+    width: 200px;
+    margin-left: 50px;
+
 }
 
 .ingredientspopup{
     background-color: #F7FFE2;
     padding: 10px;
+    font-size: 20px;
 }
 
 .ingredientspopup:hover{
@@ -109,14 +116,14 @@
 }
 
 .timemenu{
-    position: absolute;
-    right: -130px;
-    top: 389px;
+    font-size: 20px;
+    width: fit-content;
+    margin-left: 100px;
 }
 
 .timepopup{
     background-color: #F7FFE2;
-    padding: 20px;
+    padding: 10px;
 }
 
 .timepopup:hover{
@@ -124,11 +131,10 @@
 }
 
 .cuisinesmenu{
-    position: fixed;
-    left: 200px;
-    top: 541px;
     overflow-y: auto;
-    max-height: 250px
+    max-height: 250px;
+    width: 200px;
+    margin-left: 50px;
 }
 
 .cuisinepopup{
@@ -216,7 +222,8 @@
     align-items: center;
     position: relative;
     top: 10px;
-    left: 40px;
+    left: 80px;
+    font-size: 25px;
 }
 
 .userprofile{
@@ -252,6 +259,11 @@
     font-size: 14px;
     animation: fadein 0.3s ease-in-out;
 }
+.profile-content .defaultprofile{
+    width: 100px;
+    margin-left: -30px;
+}
+
   
 @keyframes fadein {
     from {
