--- a/client/src/components/loginForm/LoginForm.css
+++ b/client/src/components/loginForm/LoginForm.css
@@ -37,7 +37,7 @@
 .create-account-button {
   display: block; /* Makes the link behave like a block-level element */
   padding: 10px;
-  width: 90%;
+  width: 92%;
   font-size: 40px;
   border-radius: 15px;
   cursor: pointer;
@@ -46,7 +46,7 @@
   border: 2px solid #00aeff;
   text-align: center;
   color: white;
-  margin: 20px;
+  margin: 10px 0px 5px 20px;
   text-decoration: none; /* Ensures it looks like a button, not a link */
 }
 
